use *.valueOf()